# riffra

./: .gitattributes  .gitignore  .prettierignore  AGENT.md  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: CONCEPT.md  architecture.md  arrange-technical-design.md  behavior-requirements.md  behavior-verification.md  data-model.md  hardware-validation.md  ipc.md  prompts.md  spec-traceability.md  test-strategy.md  work-plan.md
docs/old/: CONCEPT.md
docs/ui-ux-design/: arrange-screen.md  current-ui-audit.md  migration-plan.md  ui-ux-design.md
native/audio-engine/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
native/audio-engine/src/: ArrangeRecordingSession.cpp  ArrangeRecordingSession.h  ArrangementCaptureSink.h  ArrangementGraph.cpp  ArrangementGraph.h  AudioSafetyDsp.h  Main.cpp  PluginChain.cpp  PluginChain.h  PluginEditorHost.cpp  PluginEditorHost.h  PluginRack.cpp  PluginRack.h  PluginRackSelfTest.cpp  PluginScanner.cpp  RecordingSelfTest.cpp  RecordingSelfTest.h  RecordingSession.cpp  RecordingSession.h  SafetyAudioCallback.cpp  SafetyAudioCallback.h  TimelineEngine.cpp  TimelineEngine.h
scripts/: build-native.ps1  dev-tauri.ps1  gen-barrel.js  serve-dist.mjs  test-ipc.ps1  verify.ps1
src/: App.components.test.tsx  App.module.css  App.native-api.test.tsx  App.tsx  audio-settings.test.ts  audio-settings.ts  constants.ts  domain.test.ts  domain.ts  main.tsx  native-api-fake.ts  native-api.ts  native.ts  plugin-session.test.ts  plugin-session.ts  recordings.test.ts  recordings.ts  styles.css  test-fixtures.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  assets.rs  audio_preferences.rs  diagnostics.rs  errors.rs  jobs.rs  lib.rs  library.rs  main.rs  midi.rs  migration.rs  missing.rs  model.rs  native_audio.rs  plugin_catalog.rs  plugin_validation.rs  plugins.rs  projects.rs  recordings.rs  render.rs  separation.rs  storage.rs  types.rs
src-tauri/src/analysis/: commands.rs  mod.rs
src-tauri/src/asset/: application.rs  commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/domain/: asset.rs  mod.rs  rack.rs  recording.rs  session.rs
src-tauri/src/midi/: commands.rs  mod.rs
src-tauri/src/plugins/: commands.rs  mod.rs
src-tauri/src/rack/: application.rs  commands.rs  model.rs
src-tauri/src/recording/: application.rs  commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/render/: commands.rs  mod.rs
src-tauri/src/separation/: commands.rs  mod.rs
src-tauri/src/session/: application.rs  commands.rs  migration.rs  mod.rs  model.rs
src/components/: GlobalBar.module.css  GlobalBar.tsx  InspectorPanel.module.css  InspectorPanel.tsx  LibraryPanel.tsx  MissingDependencies.tsx  TransportBar.module.css  TransportBar.tsx  audio-devices.tsx  clips.tsx  index.ts  reference.tsx  workspaces.tsx
src/components/arrange/: ArrangeClipInspector.module.css  ArrangeClipInspector.tsx  ArrangeRuler.tsx  ArrangeToolbar.tsx  ArrangeTrack.tsx  AudioClipView.tsx  AudioWaveform.tsx  MidiClipEditor.tsx  MidiClipInspector.tsx  MidiClipView.tsx  (+9 more)
src/features/: audio-safety.test.ts  audio-safety.ts  rack.test.ts  rack.ts  recording.test.ts  recording.ts
src/hooks/: useApp.ts  useAudio.ts  useDrumPads.ts  useInbox.ts  useLibrary.ts  useMusicalTyping.ts  useSession.ts
src/lib/: arrange-timeline.ts  audio-defaults.ts  audio-safety.ts  audio-settings.ts  domain.ts  drum-map.ts  midi.ts  musical-typing.ts  plugin-session.ts  rack.ts  recording.ts  recordings.ts
src/native/: invoke.ts  native-api-fake.ts  native-api.ts  native.ts
src/styles/: styles.css
src/test/: App.components.test.tsx  test-fixtures.ts  undo-redo.components.test.tsx
(+55 files in other folders)
