[package]
name = "riffra"
version = "0.1.0"
description = "Windows-first integrated music production workbench"
authors = ["Riffra contributors"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "riffra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
