[package]
name = "riffra"
version = "0.1.0"
description = "Windows-first integrated music production workbench"
authors = ["Riffra contributors"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "riffra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# §4.3.2 Tauriコマンド契約のIPC結合テストを明示的に有効化する。
# 通常テストとWindows固有のIPC実行環境を分離するためのオプトイン機能。
# `--no-run` はコンパイル確認であり、IPC実行確認には専用Windows環境が必要。
ipc-integration = ["tauri/test"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
